--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/css": "^11.9.0",
+		"@lexical/react": "^0.2.9",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.2.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -13,6 +15,9 @@
 		"react-dom": "^18.1.0",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
+		"slate": "^0.78.0",
+		"slate-history": "^0.66.0",
+		"slate-react": "^0.79.0",
 		"web-vitals": "^2.1.4",
 		"yup": "^0.32.11"
 	},
