--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"bootstrap": "^5.1.3",
 		"formik": "^2.2.9",
 		"react": "^18.1.0",
+		"react-auth-kit": "^2.1.0",
 		"react-bootstrap": "^2.4.0",
 		"react-dom": "^18.1.0",
 		"react-router-dom": "^6.3.0",
