--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"@tinymce/tinymce-react": "^4.1.0",
 		"bootstrap": "^5.1.3",
+		"date-fns": "^2.28.0",
 		"formik": "^2.2.9",
 		"react": "^18.1.0",
 		"react-auth-kit": "^2.1.0",
