--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "blog-frontend",
 	"version": "0.1.0",
+	"homepage": "https://ericchi00.github.io/blog-frontend",
 	"private": true,
 	"dependencies": {
 		"@emotion/css": "^11.9.0",
@@ -25,6 +26,8 @@
 		"yup": "^0.32.11"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"serverStart": "node www.js",
@@ -48,5 +51,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"gh-pages": "^4.0.0"
 	}
 }
